--- a/package.json
+++ b/package.json
@@ -3,25 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.28.0",
+    "@turf/turf": "^7.2.0",
+    "@types/leaflet": "^1.9.20",
+    "autoprefixer": "^10.4.21",
+    "cloudconvert": "^3.0.0",
+    "dxf-parser": "^1.1.2",
+    "exif-js": "^2.3.0",
+    "glfx": "0.0.4",
+    "jquery": "^3.7.1",
+    "leaflet": "^1.9.4",
+    "leaflet-distortableimage": "^0.21.9",
+    "leaflet-path-transform": "^1.9.0",
+    "leaflet-toolbar": "0.4.0-alpha.2",
+    "next": "15.5.3",
+    "proj4": "^2.19.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.3"
+    "webgl-distort": "0.0.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5"
   }
 }
